fixed stretch image issue in safari with height: intrinsic

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -545,6 +545,7 @@ hr {
 
 .image.profile img {
 	width: 65%;
+    height: intrinsic;
 }
 
 @media screen and (max-width: 736px) {
